# foam_linter

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: pytest.yml
foam_linter/: __init__.py  main.py
tests/: test_lib.py
tests/test_files/: controlDict  controlDict_badlyclosed
