[metadata]
name = Open Foam Linter
version = 0.1.0
author = Jaime Bowen Varela
author_email = jaimebwv@gmail.com
description = A small linter for Open Foam dictionaries',
long_description = file: README.md
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev = -r requirements.txt

[bdist_wheel]
universal = 1

